--- a/src/components/SideMenu/SideMenu.scss
+++ b/src/components/SideMenu/SideMenu.scss
@@ -21,8 +21,10 @@
     * Overwrite how .g-nav class behaves from components-barnes-toolkit/scss/state/_nav-active.scss;
     */
     &--active {
-        .g-nav {
+        
 
+        .g-nav {
+            // transform: translate3d(-100%, 0, 0) !important;
             &__inner {
                 // Style scrollbar
                 @include scrollbar();
@@ -143,13 +145,17 @@
 }
 
 .g-nav {
+
     $self: &;
     z-index: 8;
+    transform: translate3d(0, 0, 0);
 
-    // transition: 5000ms ease 50ms;
+    &--active {
+        transform: translate3d(-100%, 0, 0);
+    }
+
     
     &--custom {
-        // transform: none;
         cursor: default;
         color: $color-black;
 
