--- a/src/components/SiteHeader/siteHeader.scss
+++ b/src/components/SiteHeader/siteHeader.scss
@@ -29,6 +29,14 @@ html:not([class=""]) {
         border-color: $color__red--barnes;
       }
     }
+
+    &--hidden {
+      #{ $self }__nav {
+        &__link {
+          display: none;
+        }
+      }
+    }
   }
 
   &--unlocked {
